--- a/tex/figuresandtables.tex
+++ b/tex/figuresandtables.tex
@@ -61,7 +61,7 @@
   \tikzexternalenable
   \tikzsetnextfilename{figpred}
   \centering
-% \tikzXtrue
+ \tikzXtrue
   \iftikzX 
    \input{Figures/figpred}  
    \else 
@@ -94,7 +94,46 @@ $^{\star\star\star}$ These strains did not have enough human sequence data to ge
 \refstepcounter{table}\label{irattab}
 \fi
 % #############################################
+%#############################################
+\ifFIGS
 
+\begin{table}[!ht]\centering
+\captionN{Influenza A Strains Evaluated by IRAT and Corresponding \qnet Computed Risk Scores}\label{highrisktab}
+
+\bf\sffamily\fontsize{7}{7}\selectfont
+
+\input{Figures/tabdata/highrisk}
+% \flushleft
+
+% \fontsize{8}{8}\selectfont
+% $^\star$ HA strain is not available for A/duck/New York/1996, so this strain is omitted.\\
+% $^{\star\star}$ Could not construct a \qnet of human sequence data available for that virus sub-type (less than 30 strains), so we constructed a \qnet using all human strains that match the HA sub-type, i.e. H5NX for H5N6.\\
+% $^{\star\star\star}$ These strains did not have enough human sequence data to generate a \qnet, even when only considering the HA sub-type. Thus, we estimated the risk score using every \qnet from the other IRAT strains, and took the average among NA and HA. Finally, we took the geometric mean of the resulting NA and HA averages.
+\end{table}
+\else
+\refstepcounter{table}\label{highrisktab}
+\fi
+% #############################################
+
+%#############################################
+\ifFIGS
+
+\begin{figure}[!ht]\centering
+\centering
+
+\includegraphics[width=.9\textwidth]{Figures/riskyphylo6_collapsed_19}
+% \flushleft
+
+% \fontsize{8}{8}\selectfont
+% $^\star$ HA strain is not available for A/duck/New York/1996, so this strain is omitted.\\
+% $^{\star\star}$ Could not construct a \qnet of human sequence data available for that virus sub-type (less than 30 strains), so we constructed a \qnet using all human strains that match the HA sub-type, i.e. H5NX for H5N6.\\
+% $^{\star\star\star}$ These strains did not have enough human sequence data to generate a \qnet, even when only considering the HA sub-type. Thus, we estimated the risk score using every \qnet from the other IRAT strains, and took the average among NA and HA. Finally, we took the geometric mean of the resulting NA and HA averages.
+\captionN{Influenza A Strains Evaluated by IRAT and Corresponding \qnet Computed Risk Scores}\label{highrisktab}
+\end{figure}
+\else
+\refstepcounter{table}\label{highrisktab}
+\fi
+% #############################################
 
 % \ifFIGS
 
