--- a/tex/Figures/tabdata/highrisk.tex
+++ b/tex/Figures/tabdata/highrisk.tex
@@ -2,42 +2,42 @@
 strain&subtype& HA  accession & NA  accession & predicted  IRAT  impact & predicted  IRAT  emergence \\
  \rowcolor{Red3!20}A/swine/Missouri/A02524711/2020 &H1N1&EPI1818121&EPI1818122&6.0647&6.2944\\
  \rowcolor{Blue1!30}A/swine/Indiana/A02524710/2020 &H3N2&EPI1818137&EPI1818138&6.0469&6.2883\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02524671/2020 &H1N1&EPI1817876&EPI1817877&6.0646&6.2866\\
+ \rowcolor{Red3!20}A/swine/Colorado/A02245815/2020 &H1N1&EPI1908176&EPI1908177&6.0483&6.2835\\
+ \rowcolor{Blue1!30}A/swine/Indiana/A02479362/2020 &H3N2&EPI1769192&EPI1769194&6.0467&6.2828\\
+ \rowcolor{Red3!20}A/swine/Oklahoma/A02525154/2021 &H1N1&EPI1909021&EPI1909022&6.0438&6.2774\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02636622/2022 &H1N1&EPI2153378&EPI2153379&6.0465&6.2768\\
+ \rowcolor{Red3!20}A/swine/France/22-200115/2020 &H1N1&EPI1975316&EPI1975318&6.0479&6.2763\\
+ \rowcolor{Blue1!30}A/swine/Indiana/A02636492/2022 &H3N2&EPI2148192&EPI2148193&6.0374&6.2745\\
+ \rowcolor{Blue1!30}A/swine/Indiana/A02636041/2021 &H3N2&EPI1930925&EPI1930926&6.0374&6.2740\\
  \rowcolor{Green3!50}A/Camel/Inner\_Mongolia/XL/2020 &H7N9&EPI2026200&EPI2026202&6.0672&6.2733\\
- \rowcolor{Red3!20}A/swine/North\_Carolina/A02479173/2020 &H1N1&EPI1780425&EPI1780426&6.0644&6.2299\\
- \rowcolor{Blue1!30}A/swine/Kansas/A02479028/2020 &H3N2&EPI1777753&EPI1777754&6.0005&6.2286\\
- \rowcolor{Red3!20}A/swine/Minnesota/A02635976/2021 &H1N1&EPI1912208&EPI1912209&6.0360&6.2163\\
- \rowcolor{Blue1!30}A/swine/Italy/56910/2020 &H3N2&EPI2142217&EPI2142173&6.0196&6.2057\\
- \rowcolor{Blue1!30}A/swine/Chile/VN1401-5054/2020 &H3N2&EPI1974975&EPI1974978&5.9985&6.2048\\
- \rowcolor{Blue1!30}A/swine/Minnesota/A02245643/2020 &H3N2&EPI1769178&EPI1769179&6.0018&6.1963\\
- \rowcolor{Red3!20}A/swine/Tennessee/A02524414/2022 &H1N1&EPI2149257&EPI2149258&6.0606&6.1814\\
- \rowcolor{Red3!20}A/swine/Iowa/A02479005/2020 &H1N1&EPI1777621&EPI1777622&5.9810&6.1768\\
- \rowcolor{Blue1!30}A/swine/Iowa/A02524878/2020 &H3N2&EPI1907866&EPI1907867&5.9824&6.1715\\
- \rowcolor{Red3!20}A/swine/Indiana/A02636526/2022 &H1N1&EPI2148186&EPI2148187&5.9714&6.1608\\
- \rowcolor{Blue1!30}A/swine/Illinois/A02479007/2020 &H3N2&EPI1777629&EPI1777630&5.9756&6.1599\\
- \rowcolor{Blue1!30}A/swine/Iowa/A02524874/2020 &H3N2&EPI1907838&EPI1907839&5.9673&6.1590\\
- \rowcolor{Blue1!30}A/swine/Minnesota/A02245699/2020 &H3N2&EPI1833007&EPI1833008&5.9773&6.1569\\
- \rowcolor{Red3!20}A/swine/Minnesota/A02248037/2021 &H1N1&EPI1912188&EPI1912189&5.9639&6.1515\\
- \rowcolor{Red3!20}A/swine/Minnesota/A02711801/2022 &H1N1&EPI2153420&EPI2153421&5.9655&6.1514\\
- \rowcolor{Red3!20}A/swine/Iowa/A02635917/2021 &H1N1&EPI1911753&EPI1911754&5.9636&6.1510\\
- \rowcolor{Red3!20}A/swine/Illinois/A02635936/2021 &H1N1&EPI1911791&EPI1911792&5.9636&6.1503\\
- \rowcolor{Blue1!30}A/swine/Minnesota/A02711797/2022 &H3N2&EPI2153382&EPI2153383&5.9752&6.1489\\
- \rowcolor{Blue1!30}A/swine/Spain/44579-1/2020 &H3N2&EPI1930744&EPI1930748&5.9545&6.1479\\
- \rowcolor{Red3!20}A/swine/Minnesota/A02248061/2021 &H1N1&EPI1912494&EPI1912495&5.9585&6.1458\\
- \rowcolor{Blue1!30}A/swine/South\_Dakota/A02524914/2020 &H3N2&EPI1908070&EPI1908071&5.9592&6.1455\\
- \rowcolor{Red3!20}A/swine/South\_Dakota/A02524453/2020 &H1N1&EPI1765555&EPI1765556&5.9552&6.1453\\
- \rowcolor{Red3!20}A/swine/Minnesota/A02248060/2021 &H1N1&EPI1912500&EPI1912501&5.9600&6.1453\\
- \rowcolor{Red3!20}A/swine/Iowa/A02636439/2022 &H1N1&EPI2147475&EPI2147476&5.9571&6.1447\\
- \rowcolor{Red3!20}A/swine/Iowa/A02524875/2020 &H1N1&EPI1907858&EPI1907859&5.9574&6.1447\\
- \rowcolor{Red3!20}A/swine/Nebraska/A02636117/2021 &H1N1&EPI1932937&EPI1932938&5.9552&6.1424\\
- \rowcolor{Red3!20}A/swine/Iowa/A02524513/2020 &H1N1&EPI1832647&EPI1832648&5.9553&6.1423\\
- \rowcolor{Blue1!30}A/swine/Colorado/A02710706/2022 &H3N2&EPI2176699&EPI2176700&5.9426&6.1215\\
- \rowcolor{Red3!20}A/swine/Kansas/A02245381/2020(H1N1) &H1N1&EPI1777723&EPI1777724&5.9664&6.1173\\
- \rowcolor{Red3!20}A/swine/Iowa/A02246996/2021 &H1N1&EPI2146133&EPI2146134&5.9411&6.1030\\
- \rowcolor{Blue1!30}A/canine/Texas/21-011409-001/2021 &H3N2&EPI1896555&EPI1896557&5.9150&6.0990\\
- \rowcolor{Blue1!30}A/Muscovy\_duck/Vietnam/QN6297/2020 &H3N2&EPI1974815&EPI1974818&5.9193&6.0957\\
+ \rowcolor{Red3!20}A/swine/Nebraska/A01378046/2020 &H1N1&EPI1832818&EPI1832820&6.0426&6.2733\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02635717/2021 &H1N1&EPI1910887&EPI1910888&6.0451&6.2718\\
+ \rowcolor{Blue1!30}A/swine/Illinois/A02524654/2020 &H3N2&EPI1817170&EPI1817171&6.0390&6.2709\\
+ \rowcolor{Red3!20}A/swine/Karaganda/04/2020 &H1N1&EPI1911033&EPI1911035&6.0470&6.2703\\
+ \rowcolor{Blue1!30}A/swine/Indiana/A02525139/2021 &H3N2&EPI1908965&EPI1908966&6.0398&6.2698\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02478969/2020 &H1N1&EPI1777657&EPI1777658&6.0437&6.2670\\
+ \rowcolor{Red3!20}A/swine/Oklahoma/A02245656/2020 &H1N1&EPI1771015&EPI1771016&6.0472&6.2650\\
+ \rowcolor{Red3!20}A/swine/Metropolitana/VN1401-4915/2020 &H1N1&EPI1974951&EPI1974953&6.0458&6.2649\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02479015/2020 &H1N1&EPI1777765&EPI1777766&6.0400&6.2613\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02479177/2020 &H1N1&EPI1780435&EPI1780436&6.0397&6.2610\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02525398/2021 &H1N1&EPI1910897&EPI1910898&6.0397&6.2604\\
+ \rowcolor{Blue1!30}A/swine/Indiana/A02750772/2022 &H3N2&EPI2188367&EPI2188368&6.0318&6.2584\\
+ \rowcolor{Blue1!30}A/swine/Indiana/A02636487/2022 &H3N2&EPI2148070&EPI2148071&6.0332&6.2557\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02524662/2020 &H1N1&EPI1817158&EPI1817159&6.0397&6.2553\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02479117/2020 &H1N1&EPI1780112&EPI1780113&6.0456&6.2540\\
+ \rowcolor{Red3!20}A/swine/Indiana/A02525081/2021 &H1N1&EPI1908841&EPI1908842&6.0396&6.2511\\
+ \rowcolor{Red3!20}A/swine/Missouri/A02524800/2020 &H1N1&EPI1907255&EPI1907256&6.0433&6.2508\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02636441/2022 &H1N1&EPI2147511&EPI2147512&6.0373&6.2499\\
+ \rowcolor{Red3!20}A/swine/Utah/A02636067/2021 &H1N1&EPI1930911&EPI1930912&6.0330&6.2493\\
  \rowcolor{Red3!20}A/mallard/Russia\_Primorje/166T/2020 &H1N1&EPI1850492&EPI1850491&5.9856&6.0842\\
+ \rowcolor{Blue1!30}A/duck/Bangladesh/18D1577/2021 &H3N2&EPI1985988&EPI1985990&5.9258&6.0811\\
  \rowcolor{Blue1!30}A/swine/Iowa/A02525161/2021 &H3N2&EPI1909023&EPI1909024&5.8904&6.0786\\
  \rowcolor{DarkOrange!40}A/mink/China/chick\_embryo/2020 &H9N2&EPI2161544&EPI2161548&5.8977&6.0763\\
+ \rowcolor{Blue1!30}A/Ruddy\_Turnstone/Delaware/193/2021 &H3N2&EPI2147829&EPI2147831&5.8968&6.0763\\
+ \rowcolor{Red3!20}A/swine/Italy/29548-31/2022 &H1N1&EPI2176651&EPI2176647&5.9002&6.0660\\
+ \rowcolor{Red3!20}A/swine/Missouri/A02750742/2022 &H1N1&EPI2176594&EPI2176595&5.9563&6.0617\\
  \rowcolor{Red3!20}A/swine/Italy/127069/2020 &H1N1&EPI2142221&EPI2142147&5.9962&6.0602\\
+ \rowcolor{DarkOrange!40}A/chicken/China/2096/2021 &H9N2&EPI2116845&EPI2116843&5.8923&6.0575\\
  \rowcolor{DarkOrange!40}A/chicken/China/2042/2020 &H9N2&EPI2116789&EPI2116787&5.8963&6.0571\\
 \hline\end{tabular}
