--- a/tex/Figures/figpred.tex
+++ b/tex/Figures/figpred.tex
@@ -91,7 +91,7 @@
         font=\bf\fontsize{\TXTSZ}{5}\selectfont,
       text=\TEXTCOLA,
     nodes near coords style={
-        anchor=west,xshift=.02in,
+        anchor=west,xshift=.020in,
       },
     },
     % define the style of the `nodes near coords' that should be shown
@@ -445,8 +445,8 @@ ymax=7.7,
 \node [text=Red1] (LD3) at ([yshift=.85in,xshift=-2.10in]A11.east) {};
 \draw [] (LD3) node [text=Green3,right,above,align=center,font=\bf\sffamily\fontsize{5}{5}\selectfont,xshift=-.25in] {A/Camel/Inner\_Mongolia/XL/2020\\(emergence: 6.3, impact: 6.1)}  -- ++(.4in,0in) -- ++(.6in,-.6in) ;
 
-\node [text=Red1] (LD3) at ([yshift=1.15in,xshift=-1.05in]A11.east) {};
-\draw [] (LD3) node [text=Red1,right,above,align=center,font=\bf\sffamily\fontsize{5}{5}\selectfont,xshift=-.25in] {A/swine/Karaganda/04/2020\\(emergence: 6.27, impact: 6.04)}  -- ++(-.4in,0in) -- ++(-.55in,-.55in) ;
+% \node [text=Red1] (LD3) at ([yshift=1.15in,xshift=-1.05in]A11.east) {};
+% \draw [] (LD3) node [text=Red1,right,above,align=center,font=\bf\sffamily\fontsize{5}{5}\selectfont,xshift=-.25in] {A/swine/Karaganda/04/2020\\(emergence: 6.27, impact: 6.04)}  -- ++(-.4in,0in) -- ++(-.55in,-.55in) ;
 
 	
 \node [text=Red1] (LD4) at ([yshift=-.5in,xshift=.48in]A11.west) {};
