--- a/tex/Figures/tabdata/highrisk.tex
+++ b/tex/Figures/tabdata/highrisk.tex
@@ -1,43 +1,71 @@
 \begin{tabular}{L{1.95in}|L{.25in}|L{.60in}|L{.6in}|C{1in}|C{1in}}\hline
 strain&subtype& HA  accession & NA  accession & predicted  IRAT  impact & predicted  IRAT  emergence \\
- \rowcolor{Red3!20}A/swine/Missouri/A02524711/2020 &H1N1&EPI1818121&EPI1818122&6.0647&6.2944\\
- \rowcolor{Blue1!30}A/swine/Indiana/A02524710/2020 &H3N2&EPI1818137&EPI1818138&6.0469&6.2883\\
- \rowcolor{Red3!20}A/swine/Iowa/A02524671/2020 &H1N1&EPI1817876&EPI1817877&6.0646&6.2866\\
- \rowcolor{Red3!20}A/swine/Colorado/A02245815/2020 &H1N1&EPI1908176&EPI1908177&6.0483&6.2835\\
- \rowcolor{Blue1!30}A/swine/Indiana/A02479362/2020 &H3N2&EPI1769192&EPI1769194&6.0467&6.2828\\
- \rowcolor{Red3!20}A/swine/Oklahoma/A02525154/2021 &H1N1&EPI1909021&EPI1909022&6.0438&6.2774\\
- \rowcolor{Red3!20}A/swine/Iowa/A02636622/2022 &H1N1&EPI2153378&EPI2153379&6.0465&6.2768\\
- \rowcolor{Red3!20}A/swine/France/22-200115/2020 &H1N1&EPI1975316&EPI1975318&6.0479&6.2763\\
- \rowcolor{Blue1!30}A/swine/Indiana/A02636492/2022 &H3N2&EPI2148192&EPI2148193&6.0374&6.2745\\
- \rowcolor{Blue1!30}A/swine/Indiana/A02636041/2021 &H3N2&EPI1930925&EPI1930926&6.0374&6.2740\\
- \rowcolor{Green3!50}A/Camel/Inner\_Mongolia/XL/2020 &H7N9&EPI2026200&EPI2026202&6.0672&6.2733\\
- \rowcolor{Red3!20}A/swine/Nebraska/A01378046/2020 &H1N1&EPI1832818&EPI1832820&6.0426&6.2733\\
- \rowcolor{Red3!20}A/swine/Iowa/A02635717/2021 &H1N1&EPI1910887&EPI1910888&6.0451&6.2718\\
- \rowcolor{Blue1!30}A/swine/Illinois/A02524654/2020 &H3N2&EPI1817170&EPI1817171&6.0390&6.2709\\
- \rowcolor{Red3!20}A/swine/Karaganda/04/2020 &H1N1&EPI1911033&EPI1911035&6.0470&6.2703\\
- \rowcolor{Blue1!30}A/swine/Indiana/A02525139/2021 &H3N2&EPI1908965&EPI1908966&6.0398&6.2698\\
- \rowcolor{Red3!20}A/swine/Iowa/A02478969/2020 &H1N1&EPI1777657&EPI1777658&6.0437&6.2670\\
- \rowcolor{Red3!20}A/swine/Oklahoma/A02245656/2020 &H1N1&EPI1771015&EPI1771016&6.0472&6.2650\\
- \rowcolor{Red3!20}A/swine/Metropolitana/VN1401-4915/2020 &H1N1&EPI1974951&EPI1974953&6.0458&6.2649\\
- \rowcolor{Red3!20}A/swine/Iowa/A02479015/2020 &H1N1&EPI1777765&EPI1777766&6.0400&6.2613\\
- \rowcolor{Red3!20}A/swine/Iowa/A02479177/2020 &H1N1&EPI1780435&EPI1780436&6.0397&6.2610\\
- \rowcolor{Red3!20}A/swine/Iowa/A02525398/2021 &H1N1&EPI1910897&EPI1910898&6.0397&6.2604\\
- \rowcolor{Blue1!30}A/swine/Indiana/A02750772/2022 &H3N2&EPI2188367&EPI2188368&6.0318&6.2584\\
- \rowcolor{Blue1!30}A/swine/Indiana/A02636487/2022 &H3N2&EPI2148070&EPI2148071&6.0332&6.2557\\
- \rowcolor{Red3!20}A/swine/Iowa/A02524662/2020 &H1N1&EPI1817158&EPI1817159&6.0397&6.2553\\
- \rowcolor{Red3!20}A/swine/Iowa/A02479117/2020 &H1N1&EPI1780112&EPI1780113&6.0456&6.2540\\
- \rowcolor{Red3!20}A/swine/Indiana/A02525081/2021 &H1N1&EPI1908841&EPI1908842&6.0396&6.2511\\
- \rowcolor{Red3!20}A/swine/Missouri/A02524800/2020 &H1N1&EPI1907255&EPI1907256&6.0433&6.2508\\
- \rowcolor{Red3!20}A/swine/Iowa/A02636441/2022 &H1N1&EPI2147511&EPI2147512&6.0373&6.2499\\
- \rowcolor{Red3!20}A/swine/Utah/A02636067/2021 &H1N1&EPI1930911&EPI1930912&6.0330&6.2493\\
- \rowcolor{Red3!20}A/mallard/Russia\_Primorje/166T/2020 &H1N1&EPI1850492&EPI1850491&5.9856&6.0842\\
- \rowcolor{Blue1!30}A/duck/Bangladesh/18D1577/2021 &H3N2&EPI1985988&EPI1985990&5.9258&6.0811\\
- \rowcolor{Blue1!30}A/swine/Iowa/A02525161/2021 &H3N2&EPI1909023&EPI1909024&5.8904&6.0786\\
- \rowcolor{DarkOrange!40}A/mink/China/chick\_embryo/2020 &H9N2&EPI2161544&EPI2161548&5.8977&6.0763\\
- \rowcolor{Blue1!30}A/Ruddy\_Turnstone/Delaware/193/2021 &H3N2&EPI2147829&EPI2147831&5.8968&6.0763\\
- \rowcolor{Red3!20}A/swine/Italy/29548-31/2022 &H1N1&EPI2176651&EPI2176647&5.9002&6.0660\\
- \rowcolor{Red3!20}A/swine/Missouri/A02750742/2022 &H1N1&EPI2176594&EPI2176595&5.9563&6.0617\\
- \rowcolor{Red3!20}A/swine/Italy/127069/2020 &H1N1&EPI2142221&EPI2142147&5.9962&6.0602\\
- \rowcolor{DarkOrange!40}A/chicken/China/2096/2021 &H9N2&EPI2116845&EPI2116843&5.8923&6.0575\\
- \rowcolor{DarkOrange!40}A/chicken/China/2042/2020 &H9N2&EPI2116789&EPI2116787&5.8963&6.0571\\
+ \rowcolor{Red3!20}A/swine/Missouri/A02524711/2020 &H1N1&EPI1818121&EPI1818122&6.6318&6.7067\\
+ \rowcolor{Green3!50}A/Camel/Inner\_Mongolia/XL/2020 &H7N9&EPI2026200&EPI2026202&6.6286&6.7026\\
+ \rowcolor{Blue1!30}A/swine/Indiana/A02524710/2020 &H3N2&EPI1818137&EPI1818138&6.6070&6.6757\\
+ \rowcolor{Red3!20}A/swine/North\_Carolina/A02479173/2020 &H1N1&EPI1780425&EPI1780426&6.5878&6.6517\\
+ \rowcolor{Red3!20}A/swine/Tennessee/A02524414/2022 &H1N1&EPI2149257&EPI2149258&6.5379&6.5893\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02635976/2021 &H1N1&EPI1912208&EPI1912209&6.4841&6.5220\\
+ \rowcolor{Blue1!30}A/swine/Chile/VN1401-5054/2020 &H3N2&EPI1974975&EPI1974978&6.4578&6.4891\\
+ \rowcolor{Blue1!30}A/swine/Italy/56910/2020 &H3N2&EPI2142217&EPI2142173&6.4537&6.4840\\
+ \rowcolor{Blue1!30}A/swine/Minnesota/A02245643/2020 &H3N2&EPI1769178&EPI1769179&6.4370&6.4631\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02479005/2020 &H1N1&EPI1777621&EPI1777622&6.4103&6.4297\\
+ \rowcolor{Blue1!30}A/swine/Iowa/A02524874/2020 &H3N2&EPI1907838&EPI1907839&6.3836&6.3962\\
+ \rowcolor{Red3!20}A/swine/Indiana/A02636638/2022 &H1N1&EPI2153370&EPI2153371&6.3830&6.3954\\
+ \rowcolor{Blue1!30}A/swine/Illinois/A02479007/2020 &H3N2&EPI1777629&EPI1777630&6.3769&6.3877\\
+ \rowcolor{Blue1!30}A/swine/Spain/44579-1/2020 &H3N2&EPI1930744&EPI1930748&6.3737&6.3838\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02248037/2021 &H1N1&EPI1912188&EPI1912189&6.3694&6.3784\\
+ \rowcolor{Blue1!30}A/swine/Minnesota/A02245699/2020 &H3N2&EPI1833007&EPI1833008&6.3692&6.3781\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02635917/2021 &H1N1&EPI1911753&EPI1911754&6.3687&6.3774\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02711801/2022 &H1N1&EPI2153420&EPI2153421&6.3674&6.3759\\
+ \rowcolor{Red3!20}A/swine/Illinois/A02635936/2021 &H1N1&EPI1911791&EPI1911792&6.3671&6.3754\\
+ \rowcolor{Red3!20}A/swine/South\_Dakota/A02524453/2020 &H1N1&EPI1765555&EPI1765556&6.3658&6.3738\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02248061/2021 &H1N1&EPI1912494&EPI1912495&6.3624&6.3696\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02636439/2022 &H1N1&EPI2147475&EPI2147476&6.3616&6.3686\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02524875/2020 &H1N1&EPI1907858&EPI1907859&6.3610&6.3678\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02248060/2021 &H1N1&EPI1912500&EPI1912501&6.3592&6.3656\\
+ \rowcolor{Red3!20}A/swine/Nebraska/A02636117/2021 &H1N1&EPI1932937&EPI1932938&6.3582&6.3644\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02524513/2020 &H1N1&EPI1832647&EPI1832648&6.3580&6.3641\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02635719/2021 &H1N1&EPI1910907&EPI1910908&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02525313/2021 &H1N1&EPI1910761&EPI1910762&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Nebraska/A02524935/2020 &H1N1&EPI1908118&EPI1908119&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Missouri/A02525065/2021 &H1N1&EPI1908581&EPI1908582&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02245424/2020 &H1N1&EPI1780207&EPI1780208&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Nebraska/A02479337/2020 &H1N1&EPI1769116&EPI1769117&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02479383/2020 &H1N1&EPI1771027&EPI1771028&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Nebraska/A02479212/2020 &H1N1&EPI1775884&EPI1775885&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02479051/2020 &H1N1&EPI1778572&EPI1778573&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02524646/2020 &H1N1&EPI1817164&EPI1817165&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02524724/2020 &H1N1&EPI1818387&EPI1818388&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02524892/2020 &H1N1&EPI1907881&EPI1907882&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02524994/2020 &H1N1&EPI1908427&EPI1908428&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Missouri/A02524951/2020 &H1N1&EPI1908429&EPI1908430&6.3579&6.3640\\
+ \rowcolor{Red3!20}A/swine/Nebraska/A02479186/2020 &H1N1&EPI1774141&EPI1774142&6.3578&6.3638\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02479156/2020 &H1N1&EPI1780249&EPI1780250&6.3574&6.3634\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02479229/2020 &H1N1&EPI1775914&EPI1775915&6.3574&6.3633\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02479303/2020 &H1N1&EPI1768639&EPI1768640&6.3567&6.3625\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02710691/2021 &H1N1&EPI2146090&EPI2146091&6.3561&6.3618\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02635881/2021 &H1N1&EPI1911668&EPI1911669&6.3560&6.3616\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02525354/2021 &H1N1&EPI1910789&EPI1910790&6.3560&6.3616\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02524739/2020 &H1N1&EPI1818383&EPI1818384&6.3543&6.3595\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02635823/2021 &H1N1&EPI1911263&EPI1911264&6.3543&6.3594\\
+ \rowcolor{Blue1!30}A/swine/Minnesota/A02711797/2022 &H3N2&EPI2153382&EPI2153383&6.3537&6.3587\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02479141/2020 &H1N1&EPI1780241&EPI1780242&6.3531&6.3579\\
+ \rowcolor{Red3!20}A/swine/Nebraska/A02525367/2021 &H1N1&EPI1910817&EPI1910818&6.3516&6.3561\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02750621/2022 &H1N1&EPI2161576&EPI2161577&6.3509&6.3552\\
+ \rowcolor{Blue1!30}A/swine/Illinois/A02525253/2021 &H3N2&EPI1910375&EPI1910376&6.3506&6.3548\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02245587/2020 &H1N1&EPI1775817&EPI1775818&6.3497&6.3537\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02636114/2021 &H1N1&EPI1931853&EPI1931854&6.3487&6.3525\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02636145/2021 &H1N1&EPI1932055&EPI1932930&6.3487&6.3525\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02525217/2021 &H1N1&EPI1909087&EPI1909088&6.3487&6.3525\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02636496/2022 &H1N1&EPI2148086&EPI2148087&6.3485&6.3522\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02635871/2021 &H1N1&EPI1911656&EPI1911657&6.3473&6.3507\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02479067/2020 &H1N1&EPI1778734&EPI1778735&6.3469&6.3501\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02246459/2021 &H1N1&EPI1912518&EPI1912519&6.3465&6.3496\\
+ \rowcolor{Red3!20}A/swine/Minnesota/A02525371/2021 &H1N1&EPI1910849&EPI1910850&6.3400&6.3415\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02479343/2020 &H1N1&EPI1769114&EPI1769115&6.3387&6.3399\\
+ \rowcolor{Blue1!30}A/canine/Texas/21-011409-001/2021 &H3N2&EPI1896555&EPI1896557&6.3093&6.3030\\
+ \rowcolor{Red3!20}A/swine/Kansas/A02245381/2020(H1N1) &H1N1&EPI1777723&EPI1777724&6.2958&6.2860\\
+ \rowcolor{Red3!20}A/swine/Iowa/A02246996/2021 &H1N1&EPI2146133&EPI2146134&6.2817&6.2684\\
+ \rowcolor{DarkOrange!40}A/mink/China/chick\_embryo/2020 &H9N2&EPI2161544&EPI2161548&6.2787&6.2646\\
 \hline\end{tabular}
